1.6.3
Pre-version 1.6.3 (tests à effectuer)